<resources>
    <string name="app_name">RoamDemo</string>

    <string name="tracking">Tracking</string>
    <string name="trip">Trip</string>
    <string name="start_tracking">Start tracking</string>
    <string name="stop_tracking">Stop tracking</string>
    <string name="start_trip">Start trip</string>
    <string name="pause_trip">Pause trip</string>
    <string name="resume_trip">Resume trip</string>
    <string name="stop_trip">Stop trip</string>
    <string name="image">image</string>
    <string name="enter_tripid">Enter tripId</string>
</resources>