<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llTracking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtTracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center|start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tracking"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btnStartTracking"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_enable"
                android:text="@string/start_tracking"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnStopTracking"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_enable"
                android:text="@string/stop_tracking"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llTracking"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center|start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/trip"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edtTripId"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="center"
            android:hint="@string/enter_tripid"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btnStartTrip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_enable"
                android:text="@string/start_trip"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnPauseTrip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_enable"
                android:text="@string/pause_trip"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btnResumeTrip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_enable"
                android:text="@string/resume_trip"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnStopTrip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_enable"
                android:text="@string/stop_trip"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </TableRow>

    </LinearLayout>

</RelativeLayout>